# anypc

./: Makefile  README.md  REAME  REAME.md  pyproject.toml
scripts/: anypc.sh  install_deps.sh
src/anypc/: __init__.py  cli.py  config.py  ipc.py  server.py  worker.py
src/anypc/openpi_client/: __init__.py  image_tools.py  msgpack_numpy.py  websocket_client_policy.py
systemd/: anypc-server.service  anypc-vnc.service  ngrok-ssh.service
