[project]
name = "anypc"
version = "0.1.0"
description = "WebSocket gateway that relays observations to an inference process over ZeroMQ IPC, using openpi's remote-inference protocol (websockets + msgpack-numpy)."
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    # openpi remote-inference protocol: raw websockets carrying msgpack-numpy.
    "websockets>=13.0",
    "msgpack>=1.0",
    "numpy>=1.24",
    # Used by the vendored openpi_client.image_tools (resize/pad observations).
    "pillow>=10.0",
    # ZeroMQ relay between the websocket gateway and the inference process.
    "pyzmq>=26.0",
]

[project.scripts]
anypc-server = "anypc.cli:main"
anypc-example-worker = "anypc.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anypc"]
